- Formatting fixes. - Adjustments to generate core BaseTypes before other types, so TypeLite can use concrete TS classes instead of type definitions. - NuGet package name adjustments. - Prototype DotNetScript package.

--- a/TypeLitePlus/TypeLitePlus.csproj
+++ b/TypeLitePlus/TypeLitePlus.csproj
@@ -16,7 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TypeLitePlus.Core\TypeLitePlus.Core.csproj" />
-    <ProjectReference Include="..\TypeLitePlus.T4Templates\TypeLitePlus.T4Templates.csproj" />
+    <ProjectReference Include="..\TypeLitePlus.T4\TypeLitePlus.T4.csproj" />
   </ItemGroup>
 
 </Project>
