--- a/TypeLitePlus.T4/TypeLitePlus.T4.csproj
+++ b/TypeLitePlus.T4/TypeLitePlus.T4.csproj
@@ -4,7 +4,7 @@
     <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
     <Authors>Lukas Kabrt, Robert McLaws, and contributors.</Authors>
     <Version>2.0.0</Version>
-    <Description>Generates TypeScript classes or interfaces from .Net Standard 2.0 classes.</Description>
+    <Description>Generates TypeScript classes or interfaces from .Net Standard 2.0 classes. This package uses the T4 toolchain to run .tt files to generate your TypeScript classes in .NET Standard apps.</Description>
     <Copyright>Copyright &amp;copy; 2018 Lukas Kabrt, Robert McLaws, and CloudNimble, Inc.</Copyright>
     <PackageProjectUrl>http://type.litesolutions.net</PackageProjectUrl>
     <RepositoryUrl>https://github.com/CloudNimble/TypeLitePlus</RepositoryUrl>
