--- a/TypeLitePlus.Core/TypeLitePlus.Core.csproj
+++ b/TypeLitePlus.Core/TypeLitePlus.Core.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net480</TargetFrameworks>
     <Version>2.0.0</Version>
     <Authors>Lukas Kabrt, Robert McLaws, and contributors.</Authors>
     <Description>Generates TypeScript classes or interfaces from .Net Standard 2.0 classes. This package contains only binaries without T4 templates.</Description>
@@ -10,7 +10,7 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageProjectUrl>http://type.litesolutions.net</PackageProjectUrl>
     <RepositoryUrl>https://github.com/CloudNimble/TypeLitePlus</RepositoryUrl>
-    <PackageLicenseUrl>https://choosealicense.com/licenses/mit/</PackageLicenseUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
